addon/parsers/ogsfx/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    CPPCOMMENT
    LBRACKET
    PREPROCESSOR
    RBRACKET

Grammar

Rule 0     S' -> shader
Rule 1     shader -> block_list
Rule 2     block_list -> block
Rule 3     block_list -> block_list block
Rule 4     block -> GLSL
Rule 5     block -> technique
Rule 6     block -> uniform
Rule 7     block -> attribute_struct
Rule 8     technique -> TECHNIQUE ID annotations_opt LBRACE pass_list RBRACE
Rule 9     pass -> PASS ID annotations_opt LBRACE stage_list RBRACE
Rule 10    pass_list -> pass
Rule 11    pass_list -> pass_list pass
Rule 12    id_list -> ID
Rule 13    id_list -> id_list COMMA ID
Rule 14    shader_id_list -> ID
Rule 15    shader_id_list -> LBRACE id_list RBRACE
Rule 16    stage_name -> VERTEXSHADER
Rule 17    stage_name -> TESSCONTROLSHADER
Rule 18    stage_name -> TESSEVALSHADER
Rule 19    stage_name -> GEOMETRYSHADER
Rule 20    stage_name -> PIXELSHADER
Rule 21    stage_argument -> IN ID ID
Rule 22    stage_argument -> OUT ID ID
Rule 23    stage_argument -> IN ID
Rule 24    stage_argument -> OUT ID
Rule 25    stage -> stage_name LPAREN stage_argument COMMA stage_argument RPAREN EQ shader_id_list SEMI
Rule 26    stage_list -> stage
Rule 27    stage_list -> stage_list stage
Rule 28    empty -> <empty>
Rule 29    type_specifier -> FLOAT
Rule 30    type_specifier -> INT
Rule 31    type_specifier -> VEC2
Rule 32    type_specifier -> VEC3
Rule 33    type_specifier -> VEC4
Rule 34    type_specifier -> MAT3
Rule 35    type_specifier -> MAT4
Rule 36    type_specifier -> TEXTURE2D
Rule 37    type_specifier -> SAMPLER2D
Rule 38    number -> INT_CONST
Rule 39    number -> FLOAT_CONST
Rule 40    constant_vec2 -> LBRACE number COMMA number RBRACE
Rule 41    constant_vec3 -> LBRACE number COMMA number COMMA number RBRACE
Rule 42    constant_vec4 -> LBRACE number COMMA number COMMA number COMMA number RBRACE
Rule 43    sampler_state -> SAMPLER_STATE LBRACE TEXTURE EQ LT ID GT SEMI RBRACE
Rule 44    constant -> number
Rule 45    constant -> constant_vec2
Rule 46    constant -> constant_vec3
Rule 47    constant -> constant_vec4
Rule 48    constant -> sampler_state
Rule 49    annotation_constant -> number
Rule 50    annotation_constant -> STRING_CONST
Rule 51    annotation_constant -> BOOL_CONST
Rule 52    annotation_constant -> constant_vec2
Rule 53    annotation_constant -> constant_vec3
Rule 54    annotation_constant -> constant_vec4
Rule 55    uniform -> UNIFORM type_specifier ID annotations_opt SEMI
Rule 56    uniform -> UNIFORM type_specifier ID annotations_opt EQ constant SEMI
Rule 57    uniform -> UNIFORM type_specifier ID COLON ID SEMI
Rule 58    uniform -> UNIFORM type_specifier ID COLON ID EQ constant SEMI
Rule 59    input_specifier -> POSITION
Rule 60    input_specifier -> NORMAL
Rule 61    input_specifier -> TANGENT
Rule 62    input_specifier -> BINORMAL
Rule 63    input_specifier -> COLOR0
Rule 64    input_specifier -> TEXCOORD0
Rule 65    input_specifier -> TEXCOORD1
Rule 66    input_specifier -> TEXCOORD2
Rule 67    input_specifier -> TEXCOORD3
Rule 68    input_specifier -> TEXCOORD4
Rule 69    input_specifier -> TEXCOORD5
Rule 70    input_specifier -> TEXCOORD6
Rule 71    input_specifier -> TEXCOORD7
Rule 72    attribute -> type_specifier ID COLON input_specifier SEMI
Rule 73    attribute_list -> attribute
Rule 74    attribute_list -> attribute_list attribute
Rule 75    attribute_list_opt -> attribute_list
Rule 76    attribute_list_opt -> empty
Rule 77    attribute_struct -> ATTRIBUTE ID LBRACE attribute_list_opt RBRACE SEMI
Rule 78    annotation_type_specifier -> STRING
Rule 79    annotation_type_specifier -> INT
Rule 80    annotation_type_specifier -> FLOAT
Rule 81    annotation_type_specifier -> BOOL
Rule 82    annotation -> annotation_type_specifier ID annotation_args_opt EQ annotation_constant SEMI
Rule 83    annotation -> annotation_type_specifier ID annotation_args_opt SEMI
Rule 84    annotation_list -> annotation
Rule 85    annotation_list -> annotation_list annotation
Rule 86    annotations_opt -> empty
Rule 87    annotations_opt -> LT annotation_list GT
Rule 88    annotation_ui_specifier -> COLOR
Rule 89    annotation_ui_specifier -> RANGE LPAREN number COMMA number RPAREN
Rule 90    annotation_args -> LPAREN STRING_CONST RPAREN
Rule 91    annotation_args -> LPAREN STRING_CONST COMMA annotation_ui_specifier RPAREN
Rule 92    annotation_args_opt -> annotation_args
Rule 93    annotation_args_opt -> empty

Terminals, with rules where they appear

ATTRIBUTE            : 77
BINORMAL             : 62
BOOL                 : 81
BOOL_CONST           : 51
COLON                : 57 58 72
COLOR                : 88
COLOR0               : 63
COMMA                : 13 25 40 41 41 42 42 42 89 91
COMMENT              : 
CPPCOMMENT           : 
EQ                   : 25 43 56 58 82
FLOAT                : 29 80
FLOAT_CONST          : 39
GEOMETRYSHADER       : 19
GLSL                 : 4
GT                   : 43 87
ID                   : 8 9 12 13 14 21 21 22 22 23 24 43 55 56 57 57 58 58 72 77 82 83
IN                   : 21 23
INT                  : 30 79
INT_CONST            : 38
LBRACE               : 8 9 15 40 41 42 43 77
LBRACKET             : 
LPAREN               : 25 89 90 91
LT                   : 43 87
MAT3                 : 34
MAT4                 : 35
NORMAL               : 60
OUT                  : 22 24
PASS                 : 9
PIXELSHADER          : 20
POSITION             : 59
PREPROCESSOR         : 
RANGE                : 89
RBRACE               : 8 9 15 40 41 42 43 77
RBRACKET             : 
RPAREN               : 25 89 90 91
SAMPLER2D            : 37
SAMPLER_STATE        : 43
SEMI                 : 25 43 55 56 57 58 72 77 82 83
STRING               : 78
STRING_CONST         : 50 90 91
TANGENT              : 61
TECHNIQUE            : 8
TESSCONTROLSHADER    : 17
TESSEVALSHADER       : 18
TEXCOORD0            : 64
TEXCOORD1            : 65
TEXCOORD2            : 66
TEXCOORD3            : 67
TEXCOORD4            : 68
TEXCOORD5            : 69
TEXCOORD6            : 70
TEXCOORD7            : 71
TEXTURE              : 43
TEXTURE2D            : 36
UNIFORM              : 55 56 57 58
VEC2                 : 31
VEC3                 : 32
VEC4                 : 33
VERTEXSHADER         : 16
error                : 

Nonterminals, with rules where they appear

annotation           : 84 85
annotation_args      : 92
annotation_args_opt  : 82 83
annotation_constant  : 82
annotation_list      : 85 87
annotation_type_specifier : 82 83
annotation_ui_specifier : 91
annotations_opt      : 8 9 55 56
attribute            : 73 74
attribute_list       : 74 75
attribute_list_opt   : 77
attribute_struct     : 7
block                : 2 3
block_list           : 1 3
constant             : 56 58
constant_vec2        : 45 52
constant_vec3        : 46 53
constant_vec4        : 47 54
empty                : 76 86 93
id_list              : 13 15
input_specifier      : 72
number               : 40 40 41 41 41 42 42 42 42 44 49 89 89
pass                 : 10 11
pass_list            : 8 11
sampler_state        : 48
shader               : 0
shader_id_list       : 25
stage                : 26 27
stage_argument       : 25 25
stage_list           : 9 27
stage_name           : 25
technique            : 5
type_specifier       : 55 56 57 58 72
uniform              : 6

Parsing method: LALR

state 0

    (0) S' -> . shader
    (1) shader -> . block_list
    (2) block_list -> . block
    (3) block_list -> . block_list block
    (4) block -> . GLSL
    (5) block -> . technique
    (6) block -> . uniform
    (7) block -> . attribute_struct
    (8) technique -> . TECHNIQUE ID annotations_opt LBRACE pass_list RBRACE
    (55) uniform -> . UNIFORM type_specifier ID annotations_opt SEMI
    (56) uniform -> . UNIFORM type_specifier ID annotations_opt EQ constant SEMI
    (57) uniform -> . UNIFORM type_specifier ID COLON ID SEMI
    (58) uniform -> . UNIFORM type_specifier ID COLON ID EQ constant SEMI
    (77) attribute_struct -> . ATTRIBUTE ID LBRACE attribute_list_opt RBRACE SEMI

    GLSL            shift and go to state 4
    TECHNIQUE       shift and go to state 8
    UNIFORM         shift and go to state 9
    ATTRIBUTE       shift and go to state 10

    shader                         shift and go to state 1
    block_list                     shift and go to state 2
    block                          shift and go to state 3
    technique                      shift and go to state 5
    uniform                        shift and go to state 6
    attribute_struct               shift and go to state 7

state 1

    (0) S' -> shader .



state 2

    (1) shader -> block_list .
    (3) block_list -> block_list . block
    (4) block -> . GLSL
    (5) block -> . technique
    (6) block -> . uniform
    (7) block -> . attribute_struct
    (8) technique -> . TECHNIQUE ID annotations_opt LBRACE pass_list RBRACE
    (55) uniform -> . UNIFORM type_specifier ID annotations_opt SEMI
    (56) uniform -> . UNIFORM type_specifier ID annotations_opt EQ constant SEMI
    (57) uniform -> . UNIFORM type_specifier ID COLON ID SEMI
    (58) uniform -> . UNIFORM type_specifier ID COLON ID EQ constant SEMI
    (77) attribute_struct -> . ATTRIBUTE ID LBRACE attribute_list_opt RBRACE SEMI

    $end            reduce using rule 1 (shader -> block_list .)
    GLSL            shift and go to state 4
    TECHNIQUE       shift and go to state 8
    UNIFORM         shift and go to state 9
    ATTRIBUTE       shift and go to state 10

    block                          shift and go to state 11
    technique                      shift and go to state 5
    uniform                        shift and go to state 6
    attribute_struct               shift and go to state 7

state 3

    (2) block_list -> block .

    GLSL            reduce using rule 2 (block_list -> block .)
    TECHNIQUE       reduce using rule 2 (block_list -> block .)
    UNIFORM         reduce using rule 2 (block_list -> block .)
    ATTRIBUTE       reduce using rule 2 (block_list -> block .)
    $end            reduce using rule 2 (block_list -> block .)


state 4

    (4) block -> GLSL .

    GLSL            reduce using rule 4 (block -> GLSL .)
    TECHNIQUE       reduce using rule 4 (block -> GLSL .)
    UNIFORM         reduce using rule 4 (block -> GLSL .)
    ATTRIBUTE       reduce using rule 4 (block -> GLSL .)
    $end            reduce using rule 4 (block -> GLSL .)


state 5

    (5) block -> technique .

    GLSL            reduce using rule 5 (block -> technique .)
    TECHNIQUE       reduce using rule 5 (block -> technique .)
    UNIFORM         reduce using rule 5 (block -> technique .)
    ATTRIBUTE       reduce using rule 5 (block -> technique .)
    $end            reduce using rule 5 (block -> technique .)


state 6

    (6) block -> uniform .

    GLSL            reduce using rule 6 (block -> uniform .)
    TECHNIQUE       reduce using rule 6 (block -> uniform .)
    UNIFORM         reduce using rule 6 (block -> uniform .)
    ATTRIBUTE       reduce using rule 6 (block -> uniform .)
    $end            reduce using rule 6 (block -> uniform .)


state 7

    (7) block -> attribute_struct .

    GLSL            reduce using rule 7 (block -> attribute_struct .)
    TECHNIQUE       reduce using rule 7 (block -> attribute_struct .)
    UNIFORM         reduce using rule 7 (block -> attribute_struct .)
    ATTRIBUTE       reduce using rule 7 (block -> attribute_struct .)
    $end            reduce using rule 7 (block -> attribute_struct .)


state 8

    (8) technique -> TECHNIQUE . ID annotations_opt LBRACE pass_list RBRACE

    ID              shift and go to state 12


state 9

    (55) uniform -> UNIFORM . type_specifier ID annotations_opt SEMI
    (56) uniform -> UNIFORM . type_specifier ID annotations_opt EQ constant SEMI
    (57) uniform -> UNIFORM . type_specifier ID COLON ID SEMI
    (58) uniform -> UNIFORM . type_specifier ID COLON ID EQ constant SEMI
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . INT
    (31) type_specifier -> . VEC2
    (32) type_specifier -> . VEC3
    (33) type_specifier -> . VEC4
    (34) type_specifier -> . MAT3
    (35) type_specifier -> . MAT4
    (36) type_specifier -> . TEXTURE2D
    (37) type_specifier -> . SAMPLER2D

    FLOAT           shift and go to state 14
    INT             shift and go to state 15
    VEC2            shift and go to state 16
    VEC3            shift and go to state 17
    VEC4            shift and go to state 18
    MAT3            shift and go to state 19
    MAT4            shift and go to state 20
    TEXTURE2D       shift and go to state 21
    SAMPLER2D       shift and go to state 22

    type_specifier                 shift and go to state 13

state 10

    (77) attribute_struct -> ATTRIBUTE . ID LBRACE attribute_list_opt RBRACE SEMI

    ID              shift and go to state 23


state 11

    (3) block_list -> block_list block .

    GLSL            reduce using rule 3 (block_list -> block_list block .)
    TECHNIQUE       reduce using rule 3 (block_list -> block_list block .)
    UNIFORM         reduce using rule 3 (block_list -> block_list block .)
    ATTRIBUTE       reduce using rule 3 (block_list -> block_list block .)
    $end            reduce using rule 3 (block_list -> block_list block .)


state 12

    (8) technique -> TECHNIQUE ID . annotations_opt LBRACE pass_list RBRACE
    (86) annotations_opt -> . empty
    (87) annotations_opt -> . LT annotation_list GT
    (28) empty -> .

    LT              shift and go to state 26
    LBRACE          reduce using rule 28 (empty -> .)

    annotations_opt                shift and go to state 24
    empty                          shift and go to state 25

state 13

    (55) uniform -> UNIFORM type_specifier . ID annotations_opt SEMI
    (56) uniform -> UNIFORM type_specifier . ID annotations_opt EQ constant SEMI
    (57) uniform -> UNIFORM type_specifier . ID COLON ID SEMI
    (58) uniform -> UNIFORM type_specifier . ID COLON ID EQ constant SEMI

    ID              shift and go to state 27


state 14

    (29) type_specifier -> FLOAT .

    ID              reduce using rule 29 (type_specifier -> FLOAT .)


state 15

    (30) type_specifier -> INT .

    ID              reduce using rule 30 (type_specifier -> INT .)


state 16

    (31) type_specifier -> VEC2 .

    ID              reduce using rule 31 (type_specifier -> VEC2 .)


state 17

    (32) type_specifier -> VEC3 .

    ID              reduce using rule 32 (type_specifier -> VEC3 .)


state 18

    (33) type_specifier -> VEC4 .

    ID              reduce using rule 33 (type_specifier -> VEC4 .)


state 19

    (34) type_specifier -> MAT3 .

    ID              reduce using rule 34 (type_specifier -> MAT3 .)


state 20

    (35) type_specifier -> MAT4 .

    ID              reduce using rule 35 (type_specifier -> MAT4 .)


state 21

    (36) type_specifier -> TEXTURE2D .

    ID              reduce using rule 36 (type_specifier -> TEXTURE2D .)


state 22

    (37) type_specifier -> SAMPLER2D .

    ID              reduce using rule 37 (type_specifier -> SAMPLER2D .)


state 23

    (77) attribute_struct -> ATTRIBUTE ID . LBRACE attribute_list_opt RBRACE SEMI

    LBRACE          shift and go to state 28


state 24

    (8) technique -> TECHNIQUE ID annotations_opt . LBRACE pass_list RBRACE

    LBRACE          shift and go to state 29


state 25

    (86) annotations_opt -> empty .

    LBRACE          reduce using rule 86 (annotations_opt -> empty .)
    SEMI            reduce using rule 86 (annotations_opt -> empty .)
    EQ              reduce using rule 86 (annotations_opt -> empty .)


state 26

    (87) annotations_opt -> LT . annotation_list GT
    (84) annotation_list -> . annotation
    (85) annotation_list -> . annotation_list annotation
    (82) annotation -> . annotation_type_specifier ID annotation_args_opt EQ annotation_constant SEMI
    (83) annotation -> . annotation_type_specifier ID annotation_args_opt SEMI
    (78) annotation_type_specifier -> . STRING
    (79) annotation_type_specifier -> . INT
    (80) annotation_type_specifier -> . FLOAT
    (81) annotation_type_specifier -> . BOOL

    STRING          shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    BOOL            shift and go to state 36

    annotation_list                shift and go to state 30
    annotation                     shift and go to state 31
    annotation_type_specifier      shift and go to state 32

state 27

    (55) uniform -> UNIFORM type_specifier ID . annotations_opt SEMI
    (56) uniform -> UNIFORM type_specifier ID . annotations_opt EQ constant SEMI
    (57) uniform -> UNIFORM type_specifier ID . COLON ID SEMI
    (58) uniform -> UNIFORM type_specifier ID . COLON ID EQ constant SEMI
    (86) annotations_opt -> . empty
    (87) annotations_opt -> . LT annotation_list GT
    (28) empty -> .

    COLON           shift and go to state 38
    LT              shift and go to state 26
    SEMI            reduce using rule 28 (empty -> .)
    EQ              reduce using rule 28 (empty -> .)

    annotations_opt                shift and go to state 37
    empty                          shift and go to state 25

state 28

    (77) attribute_struct -> ATTRIBUTE ID LBRACE . attribute_list_opt RBRACE SEMI
    (75) attribute_list_opt -> . attribute_list
    (76) attribute_list_opt -> . empty
    (73) attribute_list -> . attribute
    (74) attribute_list -> . attribute_list attribute
    (28) empty -> .
    (72) attribute -> . type_specifier ID COLON input_specifier SEMI
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . INT
    (31) type_specifier -> . VEC2
    (32) type_specifier -> . VEC3
    (33) type_specifier -> . VEC4
    (34) type_specifier -> . MAT3
    (35) type_specifier -> . MAT4
    (36) type_specifier -> . TEXTURE2D
    (37) type_specifier -> . SAMPLER2D

    RBRACE          reduce using rule 28 (empty -> .)
    FLOAT           shift and go to state 14
    INT             shift and go to state 15
    VEC2            shift and go to state 16
    VEC3            shift and go to state 17
    VEC4            shift and go to state 18
    MAT3            shift and go to state 19
    MAT4            shift and go to state 20
    TEXTURE2D       shift and go to state 21
    SAMPLER2D       shift and go to state 22

    attribute_list_opt             shift and go to state 39
    attribute_list                 shift and go to state 40
    empty                          shift and go to state 41
    attribute                      shift and go to state 42
    type_specifier                 shift and go to state 43

state 29

    (8) technique -> TECHNIQUE ID annotations_opt LBRACE . pass_list RBRACE
    (10) pass_list -> . pass
    (11) pass_list -> . pass_list pass
    (9) pass -> . PASS ID annotations_opt LBRACE stage_list RBRACE

    PASS            shift and go to state 46

    pass_list                      shift and go to state 44
    pass                           shift and go to state 45

state 30

    (87) annotations_opt -> LT annotation_list . GT
    (85) annotation_list -> annotation_list . annotation
    (82) annotation -> . annotation_type_specifier ID annotation_args_opt EQ annotation_constant SEMI
    (83) annotation -> . annotation_type_specifier ID annotation_args_opt SEMI
    (78) annotation_type_specifier -> . STRING
    (79) annotation_type_specifier -> . INT
    (80) annotation_type_specifier -> . FLOAT
    (81) annotation_type_specifier -> . BOOL

    GT              shift and go to state 47
    STRING          shift and go to state 33
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    BOOL            shift and go to state 36

    annotation                     shift and go to state 48
    annotation_type_specifier      shift and go to state 32

state 31

    (84) annotation_list -> annotation .

    GT              reduce using rule 84 (annotation_list -> annotation .)
    STRING          reduce using rule 84 (annotation_list -> annotation .)
    INT             reduce using rule 84 (annotation_list -> annotation .)
    FLOAT           reduce using rule 84 (annotation_list -> annotation .)
    BOOL            reduce using rule 84 (annotation_list -> annotation .)


state 32

    (82) annotation -> annotation_type_specifier . ID annotation_args_opt EQ annotation_constant SEMI
    (83) annotation -> annotation_type_specifier . ID annotation_args_opt SEMI

    ID              shift and go to state 49


state 33

    (78) annotation_type_specifier -> STRING .

    ID              reduce using rule 78 (annotation_type_specifier -> STRING .)


state 34

    (79) annotation_type_specifier -> INT .

    ID              reduce using rule 79 (annotation_type_specifier -> INT .)


state 35

    (80) annotation_type_specifier -> FLOAT .

    ID              reduce using rule 80 (annotation_type_specifier -> FLOAT .)


state 36

    (81) annotation_type_specifier -> BOOL .

    ID              reduce using rule 81 (annotation_type_specifier -> BOOL .)


state 37

    (55) uniform -> UNIFORM type_specifier ID annotations_opt . SEMI
    (56) uniform -> UNIFORM type_specifier ID annotations_opt . EQ constant SEMI

    SEMI            shift and go to state 50
    EQ              shift and go to state 51


state 38

    (57) uniform -> UNIFORM type_specifier ID COLON . ID SEMI
    (58) uniform -> UNIFORM type_specifier ID COLON . ID EQ constant SEMI

    ID              shift and go to state 52


state 39

    (77) attribute_struct -> ATTRIBUTE ID LBRACE attribute_list_opt . RBRACE SEMI

    RBRACE          shift and go to state 53


state 40

    (75) attribute_list_opt -> attribute_list .
    (74) attribute_list -> attribute_list . attribute
    (72) attribute -> . type_specifier ID COLON input_specifier SEMI
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . INT
    (31) type_specifier -> . VEC2
    (32) type_specifier -> . VEC3
    (33) type_specifier -> . VEC4
    (34) type_specifier -> . MAT3
    (35) type_specifier -> . MAT4
    (36) type_specifier -> . TEXTURE2D
    (37) type_specifier -> . SAMPLER2D

    RBRACE          reduce using rule 75 (attribute_list_opt -> attribute_list .)
    FLOAT           shift and go to state 14
    INT             shift and go to state 15
    VEC2            shift and go to state 16
    VEC3            shift and go to state 17
    VEC4            shift and go to state 18
    MAT3            shift and go to state 19
    MAT4            shift and go to state 20
    TEXTURE2D       shift and go to state 21
    SAMPLER2D       shift and go to state 22

    attribute                      shift and go to state 54
    type_specifier                 shift and go to state 43

state 41

    (76) attribute_list_opt -> empty .

    RBRACE          reduce using rule 76 (attribute_list_opt -> empty .)


state 42

    (73) attribute_list -> attribute .

    FLOAT           reduce using rule 73 (attribute_list -> attribute .)
    INT             reduce using rule 73 (attribute_list -> attribute .)
    VEC2            reduce using rule 73 (attribute_list -> attribute .)
    VEC3            reduce using rule 73 (attribute_list -> attribute .)
    VEC4            reduce using rule 73 (attribute_list -> attribute .)
    MAT3            reduce using rule 73 (attribute_list -> attribute .)
    MAT4            reduce using rule 73 (attribute_list -> attribute .)
    TEXTURE2D       reduce using rule 73 (attribute_list -> attribute .)
    SAMPLER2D       reduce using rule 73 (attribute_list -> attribute .)
    RBRACE          reduce using rule 73 (attribute_list -> attribute .)


state 43

    (72) attribute -> type_specifier . ID COLON input_specifier SEMI

    ID              shift and go to state 55


state 44

    (8) technique -> TECHNIQUE ID annotations_opt LBRACE pass_list . RBRACE
    (11) pass_list -> pass_list . pass
    (9) pass -> . PASS ID annotations_opt LBRACE stage_list RBRACE

    RBRACE          shift and go to state 56
    PASS            shift and go to state 46

    pass                           shift and go to state 57

state 45

    (10) pass_list -> pass .

    RBRACE          reduce using rule 10 (pass_list -> pass .)
    PASS            reduce using rule 10 (pass_list -> pass .)


state 46

    (9) pass -> PASS . ID annotations_opt LBRACE stage_list RBRACE

    ID              shift and go to state 58


state 47

    (87) annotations_opt -> LT annotation_list GT .

    LBRACE          reduce using rule 87 (annotations_opt -> LT annotation_list GT .)
    SEMI            reduce using rule 87 (annotations_opt -> LT annotation_list GT .)
    EQ              reduce using rule 87 (annotations_opt -> LT annotation_list GT .)


state 48

    (85) annotation_list -> annotation_list annotation .

    GT              reduce using rule 85 (annotation_list -> annotation_list annotation .)
    STRING          reduce using rule 85 (annotation_list -> annotation_list annotation .)
    INT             reduce using rule 85 (annotation_list -> annotation_list annotation .)
    FLOAT           reduce using rule 85 (annotation_list -> annotation_list annotation .)
    BOOL            reduce using rule 85 (annotation_list -> annotation_list annotation .)


state 49

    (82) annotation -> annotation_type_specifier ID . annotation_args_opt EQ annotation_constant SEMI
    (83) annotation -> annotation_type_specifier ID . annotation_args_opt SEMI
    (92) annotation_args_opt -> . annotation_args
    (93) annotation_args_opt -> . empty
    (90) annotation_args -> . LPAREN STRING_CONST RPAREN
    (91) annotation_args -> . LPAREN STRING_CONST COMMA annotation_ui_specifier RPAREN
    (28) empty -> .
